--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -2,6 +2,7 @@ body {
 	background-image: url('concrete_wall.png');
 	font-family: 'Arvo', serif;
 	text-transform: uppercase;
+	color: #FFFFFF;
 }
 
 h1 {
@@ -11,12 +12,54 @@ h1 {
 	font-size: xx-large;
 }
 
+h2 {
+	color: #FFFFFF;
+	padding: 20px;
+	text-align: center;
+	font-size: large;
+}
+
 li {
 	float: left;
 	height: 275px;
 	padding: 10px;
 	width: 210px;
 }
+
+footer {
+	margin-left: auto;
+	margin-right: auto;
+	font-size: small;
+}
+
+nav {
+	position: fixed;
+	margin-left: auto;
+	margin-right: auto;
+	width: 100%;
+	top: 0px;
+	height: 60px;
+	background-color: black;
+	color: #FFF;
+}
+
+nav li {
+	position: relative;
+	padding: 20px 20px 20px 20px;
+}
+
+nav li:hover{
+	background: gray;
+	height: 20px;
+}
+
+.home_container{
+	width: 600px;
+	margin-right: auto;
+	margin-left: auto;
+	margin-top: 150px;
+}
+
 .container {
 	margin: 20px;
 }
